added configurations and parameters for the algorithm

--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
@@ -1,11 +1,20 @@
 // # of Process	
-numprocess 5
+numprocess 4
 
 // mean deivation
-meandev 500
+meandev 3000
 
 // standard deviation
-standdev 250
+standdev 510
+
+// standard deviation of ioblocking time
+standIoblockingDev 200
+
+// process starting ioblocking
+process 232
+process 923
+process 353
+process 353
 
 // duration of the simulation in milliseconds
 runtime 10000
