--- a/5-sem/OOP/labs/lab-2/pom.xml
+++ b/5-sem/OOP/labs/lab-2/pom.xml
@@ -31,6 +31,12 @@
       <version>1.18.30</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>24.1.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
