added standIoblockingDev and baseEstimatedExecutionTime configurations

--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
@@ -2,19 +2,25 @@
 numprocess 4
 
 // mean deivation
-meandev 3000
+meandev 10
 
 // standard deviation
-standdev 510
+standdev 2
 
 // standard deviation of ioblocking time
-standIoblockingDev 200
+standIoblockingDev 2
+
+// Basic estimated execution time used to calculate the aging speed
+baseEstimatedExecutionTime 2
+
+// alpha value for aging speed
+alpha 0.5
 
 // process starting ioblocking
-process 232
-process 923
-process 353
-process 353
+process 2
+process 5
+process 3
+process 2
 
 // duration of the simulation in milliseconds
-runtime 10000
+runtime 30
