i think it's done

--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
@@ -10,17 +10,17 @@ standdev 2
 // standard deviation of ioblocking time
 standIoblockingDev 2
 
-// Basic estimated execution time used to calculate the aging speed
+// Basic estimated execution time used to calculate the aging speed (if not set, the value will be obtained after the first ioblocking)
 baseEstimatedExecutionTime 2
 
 // alpha value for aging speed
 alpha 0.5
 
-// process starting ioblocking
-process 2
-process 5
+// process base ioblocking time
 process 3
-process 2
+process 5
+process 4
+process 3
 
 // duration of the simulation in milliseconds
 runtime 30
