--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
@@ -5,13 +5,13 @@ numprocess 4
 meandev 10
 
 // standard deviation
-standdev 2
+standdev 4
 
 // standard deviation of ioblocking time
 standIoblockingDev 2
 
 // Basic estimated execution time used to calculate the aging speed (if not set, the value will be obtained after the first ioblocking)
-baseEstimatedExecutionTime 2
+// baseEstimatedExecutionTime 2
 
 // alpha value for aging speed
 alpha 0.5
@@ -23,4 +23,4 @@ process 4
 process 3
 
 // duration of the simulation in milliseconds
-runtime 30
+runtime 50
