applied some "To Do"s from  User Guide

--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
@@ -1,17 +1,17 @@
 // # of Process	
 numprocess 4
 
-// mean deivation
-meandev 10
+// average process run time
+run_time_average 10
 
-// standard deviation
-standdev 4
+// number of standard deviations from the average time a process runs
+run_time_stddev 4
 
 // standard deviation of ioblocking time
-standIoblockingDev 2
+stand_io_blocking_dev 2
 
 // Basic estimated execution time used to calculate the aging speed (if not set, the value will be obtained after the first ioblocking)
-// baseEstimatedExecutionTime 2
+// base_estimated_execution_time 2
 
 // alpha value for aging speed
 alpha 0.5
