--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling.conf
@@ -1,11 +1,11 @@
 // # of Process	
 numprocess 3
 
-// mean deivation
-meandev 1100
+// average process run time
+run_time_average 1100
 
-// standard deviation
-standdev 510
+// number of standard deviations from the average time a process runs
+run_time_stddev 510
 
 // process    # I/O blocking
 process 100
