--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-1.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-1.conf
@@ -1,11 +1,11 @@
 // # of Process	
 numprocess 5
 
-// mean deivation
-meandev 2000
+// average process run time
+run_time_average 2000
 
-// standard deviation
-standdev 0
+// number of standard deviations from the average time a process runs
+run_time_stddev 0
 
 // alfa
 alfa 0.5
