--- a/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
+++ b/5-sem/operating-systems/lab-2/moss/shed_refactored/src/main/resources/scheduling-shortest-process-next.conf
@@ -11,7 +11,7 @@ run_time_stddev 4
 stand_io_blocking_dev 2
 
 // Basic estimated execution time used to calculate the aging speed (if not set, the value will be obtained after the first ioblocking)
-// base_estimated_execution_time 2
+base_estimated_execution_time 2
 
 // alpha value for aging speed
 alpha 0.5
