--- a/6-sem/OOP/Lab-1/pom.xml
+++ b/6-sem/OOP/Lab-1/pom.xml
@@ -118,9 +118,15 @@
           <version>1.2.12</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.postgresql</groupId>
+          <artifactId>postgresql</artifactId>
+          <version>42.7.0</version>
+      </dependency>
+
   </dependencies>
 
-    
+
   <build>
     <plugins>
 <plugin>
