--- a/6-sem/OOP/Lab-1/pom.xml
+++ b/6-sem/OOP/Lab-1/pom.xml
@@ -7,7 +7,7 @@
   <groupId>org.example</groupId>
   <artifactId>rest</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>lab-7-8-9-Airline-APIs</name>
+  <name>Housing-and-communal-services</name>
   <packaging>war</packaging>
 
   <properties>
@@ -15,16 +15,18 @@
     <maven.compiler.target>16</maven.compiler.target>
     <maven.compiler.source>16</maven.compiler.source>
     <junit.version>5.9.2</junit.version>
+    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
   </properties>
 
   <dependencies>
-<dependency>
+    <dependency>
       <groupId>jakarta.platform</groupId>
       <artifactId>jakarta.jakartaee-web-api</artifactId>
       <version>9.1.0</version>
       <scope>provided</scope>
     </dependency>
-<dependency>
+
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <version>${junit.version}</version>
@@ -124,12 +126,18 @@
           <version>42.7.0</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.mapstruct</groupId>
+          <artifactId>mapstruct</artifactId>
+          <version>${org.mapstruct.version}</version>
+      </dependency>
+
   </dependencies>
 
 
   <build>
     <plugins>
-<plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>
@@ -140,6 +148,13 @@
             <configuration>
                 <source>16</source>
                 <target>16</target>
+                <annotationProcessorPaths>
+                    <path>
+                        <groupId>org.mapstruct</groupId>
+                        <artifactId>mapstruct-processor</artifactId>
+                        <version>${org.mapstruct.version}</version>
+                    </path>
+                </annotationProcessorPaths>
             </configuration>
         </plugin>
     </plugins>
