--- a/6-sem/OOP/Lab-1/pom.xml
+++ b/6-sem/OOP/Lab-1/pom.xml
@@ -10,13 +10,13 @@
   <name>Housing-and-communal-services</name>
   <packaging>war</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.target>16</maven.compiler.target>
-    <maven.compiler.source>16</maven.compiler.source>
-    <junit.version>5.9.2</junit.version>
-    <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <junit.version>5.9.2</junit.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+    </properties>
 
   <dependencies>
     <dependency>
@@ -29,14 +29,14 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.version}</version>
+      <version>5.10.2</version>
       <scope>test</scope>
     </dependency>
 
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>${junit.version}</version>
+        <version>5.10.2</version>
         <scope>test</scope>
       </dependency>
 
@@ -71,30 +71,6 @@
           <version>1.2</version>
       </dependency>
 
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>3.1.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.inject</groupId>
-            <artifactId>jersey-hk2</artifactId>
-            <version>3.1.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-jackson</artifactId>
-            <version>3.1.3</version>
-        </dependency>
-
-      <dependency>
-          <groupId>org.glassfish.jersey.containers</groupId>
-          <artifactId>jersey-container-servlet</artifactId>
-          <version>3.1.3</version>
-      </dependency>
-
       <dependency>
           <groupId>jakarta.xml.ws</groupId>
           <artifactId>jakarta.xml.ws-api</artifactId>
@@ -126,10 +102,16 @@
           <version>42.7.0</version>
       </dependency>
 
+      <!-- Mapstruct -->
       <dependency>
           <groupId>org.mapstruct</groupId>
           <artifactId>mapstruct</artifactId>
-          <version>${org.mapstruct.version}</version>
+          <version>1.5.5.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mapstruct</groupId>
+          <artifactId>mapstruct-processor</artifactId>
+          <version>1.5.5.Final</version>
       </dependency>
 
   </dependencies>
@@ -150,9 +132,19 @@
                 <target>16</target>
                 <annotationProcessorPaths>
                     <path>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok</artifactId>
+                        <version>1.18.30</version>
+                    </path>
+                    <path>
                         <groupId>org.mapstruct</groupId>
                         <artifactId>mapstruct-processor</artifactId>
-                        <version>${org.mapstruct.version}</version>
+                        <version>1.5.5.Final</version>
+                    </path>
+                    <path>
+                        <groupId>org.projectlombok</groupId>
+                        <artifactId>lombok-mapstruct-binding</artifactId>
+                        <version>0.2.0</version>
                     </path>
                 </annotationProcessorPaths>
             </configuration>
