--- a/6-sem/OOP/Lab-1/public-utilities-servlets-api/pom.xml
+++ b/6-sem/OOP/Lab-1/public-utilities-servlets-api/pom.xml
@@ -69,6 +69,12 @@
           <version>42.7.0</version>
       </dependency>
 
+      <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.15.4</version>
+      </dependency>
+
       <!-- Mapstruct -->
       <dependency>
           <groupId>org.mapstruct</groupId>
