--- a/6-sem/OOP/Lab-1/docker-compose.yml
+++ b/6-sem/OOP/Lab-1/docker-compose.yml
@@ -1,23 +1,45 @@
-version: '3.8'
 services:
-  backend:
-    build:
-        context: ./public-utilities-servlets-api
-        dockerfile: ./backend.Dockerfile
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0.3
+    container_name: keycloak
+    volumes:
+      - ./keycloak_imports/realm.json:/opt/keycloak/data/import/realm.json
     ports:
-      - "8080:8080"
+      - 1488:1488
+      - 8443:8443
     environment:
-      - DATABASE_NAME=oop_lab_1_db
-      - DATABASE_URL=jdbc:postgresql://db:5432/oop_lab_1_db
-      - DATABASE_USER=admin
-      - DATABASE_USER_PASSWORD=secret
+      KC_DB: postgres
+      KC_DB_URL: jdbc:postgresql://keycloak_db:5434/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: password
+
+      keycloak.url: http://keycloak:1488
+      KC_HOSTNAME: localhost
+      KC_HOSTNAME_PORT: 1488
+      HOSTNAME_STRICT: false
+      KC_HOSTNAME_STRICT: false
+      KC_HOSTNAME_STRICT_HTTPS: false
+      KC_PROXY: none
+      KC_PROXY_ADDRESS_FORWARDING: true
+
+      KC_LOG_LEVEL: info
+      KC_METRICS_ENABLED: true
+      KC_HEALTH_ENABLED: true
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: [start-dev, --http-port=1488, --import-realm]
+
+    restart: always
     depends_on:
-      - db
-  db:
-    image: postgres:13
+      - keycloak_db
+
+  keycloak_db:
+    image: postgres:16.1-alpine3.19
+    container_name: keycloak_db
+    expose:
+      - 5434
     environment:
-      - POSTGRES_DB=oop_lab_1_db
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=secret
-    ports:
-      - "5432:5432"
+      - POSTGRES_USER=keycloak
+      - POSTGRES_DB=keycloak
+      - POSTGRES_PASSWORD=password
+    command: -p 5434
