--- a/6-sem/OOP/public-utilities-app/public-utilities-api/src/main/resources/application.properties
+++ b/6-sem/OOP/public-utilities-app/public-utilities-api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=public-utilities-api
 
-spring.datasource.url=${DATABASE_URL}/${DATABASE_NAME}
+spring.datasource.url=${DATASOURCE_URL}/${DATASOURCE_NAME}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=${DATABASE_USER_NAME}
-spring.datasource.password=${DATABASE_USER_PASSWORD}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
