--- a/6-sem/OOP/public-utilities-app/public-utilities-api/src/main/resources/application.properties
+++ b/6-sem/OOP/public-utilities-app/public-utilities-api/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=validate
 
 spring.flyway.baseline-on-migrate=true
+
+# Security Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:1488/realms/labs-realm
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+# JWT Configuration
+jwt.auth.converter.resource-id=public-utilities-client
+jwt.auth.converter.principal-attribute=principal_username
+
+# Logging Configuration
+logging.level.org.springframework.security=DEBUG
