--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 5-sem/ruby/zalik/zalik.rar
 7-sem/3D/lec6/explosion.blend
 7-sem/3D/lec6/explosion.blend1
+7-sem/3D/lab2/lab2.blend1
+7-sem/3D/lab2/lab2.blend
