--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 *.blend1
 7-sem/3D/lab3/lab3.blend
 7-sem/3D/lec11/lec11.blend
+diploma/dataset/
+8-sem/MIS/exam_dataset.csv
+/diploma/pyproj/dataset/
+/diploma/pyproj/dataset_noisy/
