--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@
 7-sem/3D/lec11/lec11.blend
 diploma/dataset/
 8-sem/MIS/exam_dataset.csv
+8-sem/MIS/data.csv
 /diploma/pyproj/dataset/
 /diploma/pyproj/dataset_noisy/
